# happiness-forecast

./: .gitignore  README.md  docker-compose.yaml  dockerfile  kafka_consumer.py  kafka_producer.py  pyproject.toml  requirements.txt
data/: happiness_dataset_merged.csv
models/: xgboost_model.joblib
notebooks/: 001_EDA.ipynb  002_feature_engineering.ipynb  003_model_evaluation.ipynb
utils/: data_explorer.py  db_postgres.py  kafka.py  ww_gif_generator.py
