[tool.poetry]
name = "workshop-003"
version = "0.1.0"
description = ""
authors = ["sebas1193 <juansebasitan05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
sqlalchemy = "^2.0.36"
notebook = "^7.2.2"
country-converter = "^1.2"
geopandas = "^1.0.1"
xgboost = "^2.1.2"
imageio = "^2.36.0"
statsmodels = "^0.14.4"
joblib = "^1.4.2"
python-dotenv = "^1.0.1"
six = "^1.16.0"
kafka-python-ng = "^2.2.3"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
